--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <title>GR || Gabriel Rodriguez</title>
+    <title>Gabriel Rodriguez | Full Stack, Mobile & DevOps Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
